fix: header vertical align

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 header {
 	margin: 0;
 	padding-top: 0;
+	display: inline-flex;
 }
 
 p {
